# agri-me

./: Cargo.toml  README.md  contract.rs  lib.rs  package-lock.json  package.json
agri-me-funcs/: index.js  package.json
app/: page.tsx
hooks/: useWallet.ts
move/agri_me/: Move.toml
move/agri_me/sources/: agri_token.move  events.move  insurance.move  livestock.move
services/: stellar.ts
src/: App.js
src/components/Dashboard/: AdminDashboard.js  LandingPage.js
src/components/IoTDashboard/: IoTLivestockDashboard.js
src/services/: GeofencingOracleAdapter.js  InsuranceTriggerValidator.js  OfflineEventBuffer.js  agroAiClient.js  aptosOracleClient.js
